--- a/design-service/pom.xml
+++ b/design-service/pom.xml
@@ -11,6 +11,10 @@
 
     <artifactId>design-service</artifactId>
 
+    <properties>
+        <shiro.version>1.3.2</shiro.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.alanzhang</groupId>
