--- a/design-web/src/main/resources/application.properties
+++ b/design-web/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #druid¡¨Ω”
-spring.datasource.url=jdbc:mysql://localhost:3306/test?autoReconnect=true&useCompression=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
+spring.datasource.url=jdbc:mysql://localhost:3306/zz_design?autoReconnect=true&useCompression=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.initialSize=5
